# valerework

./: .gitignore  calculatorV.py  parseandanalyzecsvfile.py  primenumebercheck.py  studentmarksmanagementsystem.py
day1/: calculator.py  readme.md
day10/: .gitignore
day10/djangoproject/: db.sqlite3
day10/djangoproject/ecom/: .env  settings.py  urls.py
day10/djangoproject/ecommerce/: admin.py  forms.py  models.py  urls.py  views.py
day11/django_project/: db.sqlite3
day11/django_project/ecommerce/: .env  settings.py  urls.py
day2/: prime_numeber_check.py  primenumebercheck.py  readme.md
day3/: readme.md  student_marks_management_system.py  studentmarksmanagementsystem.py
day4/: SalesData.csv  file.json  file_analysis.ipynb  file_operations.py  fileoperations.py  practice.csv  practice2.csv  readme.md
day5/: custom_logger.py  logging_basic.py  name.json  parser.py  parser_logger_assignment.py  parser_logging_assignment.py  readme.md  trial.txt
day6/: employee_management_system.py  readme.md
day7/: calc.py  readme.md  test_calc.py  test_employee_management_system.py  test_prime_number_check.py
day8/: curd.py  employee_database.py  readme.md
day9/: readme.md
day9/django-polls/: pyproject.toml
day9/django-polls/django_polls/: apps.py  models.py  views.py
day9/django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day9/django-polls/django_polls/migrations/: 0001_initial.py
day9/django-polls/django_polls/static/polls/: style.css
day9/django-polls/django_polls/templates/polls/: results.html
day9/djangobasic/: db.sqlite3
(+37 files in other folders)
